Dev-RBI/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Site_Address_State__c</fullName>
        <label>Site Address State</label>
        <picklist>
            <picklistValues>
                <fullName>Andaman &amp; Nicobar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra &amp; Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman &amp; Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujrat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu &amp; Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshdweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pondichery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Address_zipcode__c</fullName>
        <label>Site Address zipcode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_NameDesg__c</fullName>
        <label>Name/Designation of Person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Date__c</fullName>
        <label>Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sports_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sports Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Field to hold the status of the project</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>PDS</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PQR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Surveyor_Email__c</fullName>
        <description>This field is updated by workflow when the surveyor is changed in the Project</description>
        <label>Surveyor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Surveyor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to capture Surveyor from User Object.</description>
        <label>Surveyor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Swimming_Pool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Swimming Pool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TDR_Deviation__c</fullName>
        <formula>&apos;Y&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TDR Deviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDR_Permitted__c</fullName>
        <label>TDR Permitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TDR_Proposed__c</fullName>
        <label>TDR Proposed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Lead_Email__c</fullName>
        <formula>Team_Leader__r.Email</formula>
        <label>Team Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used when (TSR or DVU)visit record is created.</description>
        <label>Team Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Head_Email__c</fullName>
        <label>Technical Head Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Technical_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TechnicalHead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tennis_Court__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tennis Court</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Be_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is flag which will determine whether a project needs to be displayed to the Customer or not. If it is Y,, then it will not be displayed to any Customer.</description>
        <label>To Be Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Units__c</fullName>
        <label>Total Units</label>
        <summarizedField>Tower__c.Total_Units__c</summarizedField>
        <summaryForeignKey>Tower__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <formula>LOWER( Project_Name__c &amp; TEXT( Site_Address_City__c )  &amp;  Developer_Id__r.Name )</formula>
        <label>Unique Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilized_FSI__c</fullName>
        <label>Utilized FSI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>construction_Status__c</fullName>
        <label>Construction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underconstruction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Halted (Builder)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Halted (Court)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Halted (External)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Site_Address_Line_1__c</columns>
        <columns>Site_Address_Line_2__c</columns>
        <columns>Site_Address_City__c</columns>
        <columns>Site_Address_State__c</columns>
        <columns>Site_Address_zipcode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRJ-{000000000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Brochure_Zip_Code_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>IF (NOT(ISBLANK(Brochure_Zipcode__c )), 
    NOT(ISNUMBER(Brochure_Zipcode__c )),
NULL)</errorConditionFormula>
        <errorDisplayField>Brochure_Zipcode__c</errorDisplayField>
        <errorMessage>Please enter correct zip code which contains only numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Construction_Start_Date_Shouldnotbe_Null</fullName>
        <active>true</active>
        <description>Construction Start Date should not be NULL if Construction status is Not  equal to &quot;Not Started</description>
        <errorConditionFormula>AND 
( 
OR 
( 
ISPICKVAL(construction_Status__c, &quot;Completed&quot;), 
ISPICKVAL(construction_Status__c, &quot;Underconstruction&quot;) 
),
OR ( 
  ISBLANK(Construction_Start_Date__c)  
)
)</errorConditionFormula>
        <errorMessage>You should enter construction start date if construction status of project is other than &apos;Not Started&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_ZTH_should_be_able_to_edit</fullName>
        <active>true</active>
        <description>Only ZTH should be able to edit  Document Received date</description>
        <errorConditionFormula>AND(  NOT(ISCHANGED( Document_Received_by__c ) ) , ISCHANGED(  Document_Received_date__c ) ,$User.Id  &lt;&gt;  Technical_Head__c)</errorConditionFormula>
        <errorDisplayField>Document_Received_date__c</errorDisplayField>
        <errorMessage>Only Zonal Technical Head  should be able to edit Document Received Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Site_Address_Zip_Code_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>IF (NOT(ISBLANK(Site_Address_zipcode__c )), 
    NOT(ISNUMBER(Site_Address_zipcode__c )),
NULL)</errorConditionFormula>
        <errorDisplayField>Site_Address_zipcode__c</errorDisplayField>
        <errorMessage>Please enter correct zip code which contains only numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Site_City_Validation_Rule</fullName>
        <active>true</active>
        <description>This is used to make the site city mandatory for the project.</description>
        <errorConditionFormula>ISBLANK(TEXT(Site_Address_City__c))</errorConditionFormula>
        <errorDisplayField>Site_Address_City__c</errorDisplayField>
        <errorMessage>Please enter the project site city.</errorMessage>
    </validationRules>
</CustomObject>